--- a/index.html
+++ b/index.html
@@ -219,65 +219,16 @@
     <!-- Galeria -->
     <section id="galeria" class="gallery-section fade-in">
         <h2 class="gallery-title">Nossos Trabalhos</h2>
+        <p class="gallery-subtitle">Explore nossa galeria e encontre inspiração para seu próximo bolo</p>
+        
         <div class="gallery-filters">
-            <button class="filter-btn active" onclick="filterGallery('all')">Todos</button>
-            <button class="filter-btn" onclick="filterGallery('bolos')">Bolos Decorados</button>
-            <button class="filter-btn" onclick="filterGallery('caseirinhos')">Bolos Caseirinhos</button>
-            <button class="filter-btn" onclick="filterGallery('paes')">Pães</button>
+            <!-- Filtros serão inseridos via JavaScript -->
         </div>
+        
         <div class="gallery-grid">
-            <div class="gallery-item" data-category="bolos"><img src="images/downloadgram.org_461696459_1165667781194474_2951026535375491126_n.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/downloadgram.org_491441920_17941518353989810_7528810505330933416_n.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/downloadgram.org_491445179_17941298519989810_5302708275154565688_n.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/downloadgram.org_500326630_17944514105989810_8843742206483996231_n.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/downloadgram.org_500445005_17944514042989810_9219063004013298111_n.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/downloadgram.org_500658581_17944514078989810_5785383886066996581_n.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/downloadgram.org_501058622_17944514033989810_8970938834600463667_n.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/downloadgram.org_501264420_17944514096989810_8872102859826452961_n.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/downloadgram.org_501542616_17944514021989810_343356933580456667_n.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/downloadgram.org_537499987_17954578145989810_7172687175539727990_n.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="caseirinhos"><img src="images/optimized/downloadgram.org_457383571_506368645434009_3148807429923215423_n.webp" alt="Bolo Caseirinho" loading="lazy"></div>
-            <div class="gallery-item" data-category="caseirinhos"><img src="images/optimized/downloadgram.org_457503858_483408134487583_8024968526927135757_n (1).webp" alt="Bolo Caseirinho" loading="lazy"></div>
-            <div class="gallery-item" data-category="caseirinhos"><img src="images/optimized/downloadgram.org_457522063_866805058333348_7268343729862773615_n.webp" alt="Bolo Caseirinho" loading="lazy"></div>
-            <div class="gallery-item" data-category="doces"><img src="images/IMG-20251013-WA0003.jpg" alt="Doces" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0005.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="paes"><img src="images/pao.jpg" alt="Pães" loading="lazy"></div>
-            <div class="gallery-item" data-category="paes"><img src="images/IMG-20251013-WA0008.jpg" alt="Pães" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0016.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0018.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0020.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0022.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0025.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0028.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0030.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0033.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0035.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0038.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0040.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0043.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0045.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0048.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0050.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0053.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0055.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0060.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0063.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0065.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0068.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0070.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0073.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0075.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0078.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0080.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0083.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0085.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0088.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0090.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0093.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0095.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0098.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0100.jpg" alt="Bolo Decorado" loading="lazy"></div>
-            <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0105.jpg" alt="Bolo Decorado" loading="lazy"></div>
+            <!-- Itens serão inseridos via JavaScript -->
+        </div>
+    </section>
             <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0110.jpg" alt="Bolo Decorado" loading="lazy"></div>
             <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0115.jpg" alt="Bolo Decorado" loading="lazy"></div>
             <div class="gallery-item" data-category="bolos"><img src="images/IMG-20251013-WA0120.jpg" alt="Bolo Decorado" loading="lazy"></div>
@@ -431,6 +382,9 @@
         </a>
     </div>
 
+    <script src="js/price-calculator.js" defer></script>
+    <script src="js/reviews.js" defer></script>
+    <script src="js/gallery-filters.js" defer></script>
     <script src="js/script.js" defer></script>
 </body>
 </html>
